@@ -1,0 +1,38 @@
+/* $Id$ */
+/*
+ * Copyright (C) 2008 Nick Schermer <nick@xfce.org>
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ */
+
+#ifndef __LIBXFCE4PANEL__
+#define __LIBXFCE4PANEL__
+
+G_BEGIN_DECLS
+
+#include <libxfce4panel/libxfce4panel-enum-types.h>
+#include <libxfce4panel/xfce-arrow-button.h>
+#include <libxfce4panel/xfce-hvbox.h>
+#include <libxfce4panel/xfce-panel-convenience.h>
+#include <libxfce4panel/xfce-panel-enums.h>
+#include <libxfce4panel/xfce-panel-external-plugin.h>
+#include <libxfce4panel/xfce-panel-internal-plugin.h>
+#include <libxfce4panel/xfce-panel-macros.h>
+#include <libxfce4panel/xfce-panel-plugin-iface.h>
+#include <libxfce4panel/xfce-panel-plugin.h>
+
+G_END_DECLS
+
+#endif /* !__LIBXFCE4PANEL__ */
