@@ -5,6 +5,9 @@
 - Rebuild the plugin if the properties dialog is cancelled (bug #4612).
 - Set DISPLAY variable so the launcher launches on the correct screen
   (bug #4654).
+- Add missing functions in the symbols file (bug #4700).
+- Added a libxfce4panel.h header that includes all other headers for
+  plugin writers.
 
 
 4.5.92
